--- a/src/style.css
+++ b/src/style.css
@@ -21,12 +21,6 @@ ul{
   list-style-type: none;
 }
 
-/* li{
-  padding: 2rem;
-  border: 2px solid #eee;
-  margin: 10px auto;
-} */
-
 .log-div{
   padding: 2rem;
   border: 2px solid #eee;
@@ -78,7 +72,8 @@ input, select{
   margin: 0 10px;
 }
 
-.add-btn{
+.add-btn, 
+.clear-btn{
   margin: 1rem;
   color: white;
   border: 0;
@@ -90,7 +85,8 @@ input, select{
   transition: all 0.3s ease;
 }
 
-.add-btn:hover {
+.add-btn:hover,
+.clear-btn:hover {
   color: #ff0aa7;
   background: #eee;
   font-weight: 600;
@@ -150,6 +146,6 @@ p {
 
 @media screen and (max-width: 294px) {
   footer{
-      padding: 0;
+    padding: 0;
   }
 }
